--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -1,59 +1,4 @@
-.container{
-    width: 100%;
-    display:flex;
-    flex-wrap: wrap;
-    flex-direction:row;
-    border:1px red solid;    
-}
-.left-sidebar {
-    width: 20%;
-    margin: 10px;
-    border:1px red solid;
-    text-align:center;
-}
-.SportsContent{
-    flex: 1; 
-    margin: 10px;
-    border:1px red solid;
-    text-align:center;
-}
-.SportsRightSidebar{
-    width: 20%;
-    margin: 10px;
-    border:1px red solid;
-    text-align:center;
-}
-header {
-    /* To keep header 100% width. */
-    flex: 0 0 100%;
-    height:100px;
-    text-align: center;    
-    color:  #80807B;
-    /*Styles for sample presentation*/
-    background-color:  #111111;
-  }
-
- #banner{
-    position: absolute;
-    padding: 1%;
-    left: 1%;
-    height: 10;
-    width: 15%;
-    float: left;
-}
-#links{
-    position: relative;      
-    top: 35%;
-    display: inline;
-}
-#links a{
-    margin-right: 20px;
-    color: #80807B;
-    text-decoration: none;
-}
-#links a:hover{
-    color: #F8B004;
-}
-#links .active{
-    color: #F8B004;
+.ui.button{
+    text-transform: uppercase;    
+    
 }
