--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -1,4 +1,3 @@
-.ui.button{
-    text-transform: uppercase;    
-    
+.ui.table td.active, .ui.table tr.active{
+   background: lightgreen !important;        
 }
