Work 04 April 2019 noon2

--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -28,8 +28,11 @@ td.active:hover, tr.active:hover{
 }
 
 .komponenta{
-    background-color: red;
-   
+    background-color: red;       
+}
+.betvip-subheader:hover{
+    background-color: yellow;
+    cursor: pointer;
 }
 #tabelica > thead > tr > th{    
 	padding: 2px;
