--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -59,6 +59,61 @@
   .secondary.menu.login-header{
     display: none !important ;
 }
+.button-main-container {
+    margin: 0;
+    width: 100% !important;
+    border-radius: 0;
+    border: 1px solid white;
+    text-transform: uppercase;
+    text-align: left;
+    padding: 7px 10px;
+    font-size: 10px;
+}
+.table-row-main-container{
+    display: inline-block !important;
+    padding: 0 !important;   
+    
+    color: #1FE8AF !important;
+    width: 100%;   
+    font-size: 12px; 
+}
+.ui.table:not(.unstackable) tr{
+    background: #0E1E2B;
+}
+.button-main-container{
+    background: #293744;
+    color: #DFDFE7;
+    border-color: #0E1E2B !important; 
+}
+.button-main-container span{
+    padding-left: 10px;
+}
+.table-header-cell-right h5{
+    text-transform: lowercase;
+    font-size: 13px !important;
+}
+
+.ui.checkbox .box:before, .ui.checkbox label:before {    
+    top: 7px;
+    left: 5px;
+    width: 12px;
+    height: 12px;
+}
+.ui.checkbox .box:after, .ui.checkbox label:after {
+    top: 5px;
+    left: 3px; 
+}
+.ui.checkbox input:checked ~ .box:after, .ui.checkbox input:checked ~ label:after{
+    color: #0E1E2B
+}
+.ui.button.main-button-list, .ui.button.second-button-list, .ui.button.third-button-list{
+    width: 50%;
+    font-size: 12px;
+}
+.ui.center.aligned.segment .ui.basic.button{
+    font-size: 10px;
+    padding: 3px;
+}
 }
 
 /* Menu - End */
