--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -114,6 +114,11 @@
     font-size: 10px;
     padding: 3px;
 }
+.ui.container {
+    width: auto!important;
+    margin-left: 2px !important;
+    margin-right: 2px !important;
+}
 }
 
 /* Menu - End */
