12 Avgust 2019 Responsive - END

--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -1,3 +1,10 @@
+#modal-header-marcatori, .ui.orange.button.main-button-list{
+    background-repeat: no-repeat;
+    background-position: right;    
+    background-size: contain;
+    text-align: left;
+}
+
 #champsPopupId{
     background: #0E1E2B;
        
