--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -1,3 +1,28 @@
+#push-dugme{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+/* .ui.top.visible.sidebar, .ui.bottom.visible.sidebar{
+    box-shadow: none;
+}
+.ui.visible.bottom.sidebar ~ .fixed, .ui.visible.bottom.sidebar ~ .pusher {
+    -webkit-transform: translate3d(0, -0px, 0);
+    transform: translate3d(0, 0px, 0);
+    box-shadow: none;
+}
+.ui.bottom.sidebar {
+    top: 20px !important;
+    bottom: 60px !important;
+    box-shadow: none;
+    
+} */
+.ui.modal > .actions, #modal-header-marcatori{
+    background-color: #0E1E2B;
+    color: #DFDFE7;
+    
+}
+
 #modal-header-marcatori, .ui.orange.button.main-button-list{
     background-repeat: no-repeat;
     background-position: right;    
@@ -7,8 +32,20 @@
 
 #champsPopupId{
     background: #0E1E2B;
-       
+    padding: 5px 5px;
+    border-bottom: 1px solid #DFDFE7;       
 }
+
+.header #champsPopupId{
+    background: #0E1E2B;
+    padding: 0px;
+    border-bottom: none;       
+}
+
+.ui.celled.striped.unstackable.table{
+    background: #293744;
+}
+
 /* Scrollbar */
 .scroll {
     white-space: nowrap; /* [1] */
@@ -236,7 +273,7 @@
 
 /* Sport Page - Middle Box Container */
 .middle-box-container{
-    border: 4px solid #566C79;
+    border: 2px solid #566C79;
     margin-bottom: 20px;
 }
 
