--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -1,8 +1,21 @@
 #push-dugme{
     position: fixed;
     bottom: 0;
-    left: 0;
+    left: 35%;    
+    padding: 10px 30px;
+    background: #0E1E2B;
+    border: 2px solid #1FE8AF;
+    border-bottom: none;
+    border-radius: 30px 30px 0px 0px;
 }
+#push-dugme i{
+    color: #DFDFE7;
+}
+#push-dugme .ui.circular.label{
+    color: #0E1E2B;
+    background-color: #DFDFE7;
+}
+
 
 .ui.fullscreen.modal {
     width: 100% !important;
