--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -1,3 +1,16 @@
+.ui.middle.aligned.divided.list.multipla-modal-ticket{
+    margin-top: 20px !important;
+}
+.ui.celled.unstackable.table.ticket-modal-table{
+    text-align: center;
+    border: none;
+    border-top: 1px solid #0E1E2B;    
+    border-radius: 0;    
+}
+.ticket-modal-table td:active{
+    background: #1FE8AF;
+}
+
 #push-dugme{
     position: fixed;
     bottom: 0;
@@ -18,6 +31,7 @@
 
 .ui.fullscreen.modal > .header {    
     min-height: 85px;
+    padding: 0px !important;
 }
 
 .ui.fullscreen.modal {
@@ -31,9 +45,11 @@
 .ui.modal .scrolling.content {    
     overflow: overlay;
     max-height: calc(100vh - 10em);
+    padding: 0px !important;
+    background: #293744;
 }
 
-.ui.modal > .actions, #modal-header-marcatori {    
+.ticket-modal{    
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -61,7 +77,7 @@
     
 }
 
-#modal-header-marcatori, .ui.orange.button.main-button-list{
+#modal-header-marcatori, .ui.orange.button.main-button-list{    
     background-repeat: no-repeat;
     background-position: right;    
     background-size: contain;
@@ -396,6 +412,12 @@
     color: #DFDFE7;
     margin: 2px 0px;
     padding: 10px 10px;
+    border-bottom: 1px solid #DFDFE7;
+    
+}
+
+.ui.middle.aligned.divided.list.multipla-modal-ticket{    
+    border-top: 10px solid #DFDFE7;
     
 }
 .ui.horizontal.list{
