15 Avgust 2019 Responsive - First Commit

--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -60,7 +60,8 @@
     padding: 0 !important;
 }
 .ui.modal .scrolling.content {    
-    overflow: overlay;
+    overflow-y: scroll;
+    overflow-x: hidden;
     max-height: calc(100vh - 10em);
     padding: 0px !important;
     background: #293744;
