--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -1,3 +1,33 @@
+.single-match-row-mobile{
+    width: 33%;
+    float: left;
+    text-align: center;
+}
+button.ui.button.single-odds-label {
+    background: white;
+    border: 1px solid #1FE8AF;
+    color: #000;
+    width: 100%;    
+}
+button.ui.button.single-active-odds-label {
+    background: #10393C;
+    border: 1px solid #1FE8AF;
+    color: #fff;
+    width: 100%;    
+}
+.eleven.wide.column.mobile{
+    padding: 0px !important;
+}
+.ui.main.clearing.segment.mobile{
+    padding: 5px;
+    margin: 0px;
+}
+.ui.main.clearing.segment.mobile h1{
+    font-size: 16px;
+}
+.ui.main.clearing.segment.mobile h4{
+    font-size: 16px;
+}
 .ui.button.modal-ticket-header-button{
     width: 100%;
     height: 100%;
