23 Avgust 2019 Responsive+gamesByDate Finish

--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -18,8 +18,10 @@ div#button-grid-desktop{
 }
 .ui.grid.inner {
     max-height: 300px;
-    overflow-y: scroll;
-    
+    overflow-y: scroll;    
+}
+.ui.radio.checkbox{
+    width: 25%;
 }
 #input-sistema-ticket-row{
     padding: 0px;
