--- a/src/public/css/Sports.css
+++ b/src/public/css/Sports.css
@@ -154,11 +154,12 @@ button.ui.button.single-active-odds-label {
 #push-dugme{
     position: fixed;
     bottom: 0;
-    left: 34%;    
+    left: 50%;    
     padding: 10px 30px;
     background: #0E1E2B;
     border: 2px solid #1FE8AF;
     border-bottom: none;
+    transform: translateX(-50%);
     border-radius: 30px 30px 0px 0px;
 }
 #push-dugme i{
